--- a/Theory.tex
+++ b/Theory.tex
@@ -1,11 +1,11 @@
-The standard model of particle physics (SM) describes the fundamental particles and interactions between them. It is a theory that successfully predicted the existence of several at that time undiscovered particles like e.g. the W boson \todo{Quellen: Teilchen Entdeckungen}, the top quark or the $\tau$ neutrino. In addition, it has been tested extensively in electroweak precision measurements at LEP. \\
+The standard model of particle physics (SM) describes the fundamental particles and interactions between them. It is a theory that successfully predicted the existence of several at that time undiscovered particles. In addition, it has been tested extensively in electroweak precision measurements at LEP. \\
 Although the SM shows so far a remarkably successful performance there are also some open questions which can not be answered within the SM. Thus several theories have been developed to address problems which go beyond the SM. One of such well-motivated extensions is supersymmetry (SUSY) for which however no experimental evidence has been found so far. \\
-After a short introduction to the phenomenology of the standard model including a discussion of specific shortcomings~\cite{bib:PDG:2012}, the basic concepts of supersymmetry are introduced in this chapter \todo{Ref?}. In addition, general concepts of searches for supersymmetry at collider experiments are discussed together with a summary of the current status of the results of such searches which have been performed in the past.
+After a short introduction to the phenomenology of the standard model including a discussion of specific shortcomings, the basic concepts of supersymmetry are introduced in this chapter. In addition, general concepts of searches for supersymmetry at collider experiments are discussed together with a summary of the current status of the results of such searches which have been performed in the past.
 \section{The Standard Model of Particle Physics}
 \label{sec:sm}
-The description of the SM comprises the elementary particles and their interactions. In general, one distinguishes between two types of particles: fermions and bosons. While matter particles are fermions with half-integer spin, the fundamental forces are mediated via bosons carrying integer spin. An overview of the contents of the SM is given in Fig.~\ref{fig:SM} where the particles are denoted together with their interactions \footnote{Gravity is not included in the current representation of the standard model and thus it is not discussed in this thesis.}. \\
+The description of the SM comprises the elementary particles and their interactions~\cite{bib:PDG:2012}. In general, one distinguishes between two types of particles: fermions and bosons. While matter particles are fermions with half-integer spin, the fundamental forces are mediated via bosons carrying integer spin. An overview of the contents of the SM is given in Fig.~\ref{fig:SM} where the particles are denoted together with their interactions \footnote{Gravity is not included in the current representation of the standard model and thus it is not discussed in this thesis.}. \\
 \begin{figure}[!tp]
-  \centering
+  \centering 
   \begin{tabular}{c}
     \includegraphics[width=0.9\textwidth]{figures/SM.jpg}
   \end{tabular}
@@ -32,19 +32,19 @@ Matter particles interact with each other through fundamental forces mediated vi
  \begin{description}
   \item \textit{Electromagnetic Force:} The description of the electromagnetic force is based on the theory of \textit{Quantum Electrodynamics} (QED). It is communicated between electrically charged particles, like the charged leptons and quarks, by the exchange of photons. These are massless and electrically neutral resulting in the property that the electromagnetic force is long ranged.
   \item \textit{Weak Force:} The weak force acts on the weak charge which is carried by all fermions in the SM. It is mediated by three vector bosons -- namely the two charged \Wpm bosons and the neutral \Z boson. These bosons are unlike the photon massive with masses of $\Wpm = 80.385 \pm 0.015$\gev and $\Z = 91.1876 \pm 0.0021$\gev~\cite{bib:PDG:2012}. As a result the weak interaction is suppressed with respect to the electromagnetic force. \\
-Weak interactions preferably take place within one generation, e.g. \lel or \lmu transform into the respective neutrinos when emitting a \Wm. However, since the mass eigenstates in the weak interaction differ from the flavour eigenstates, \Wpm bosons can also couple to fermions between different generations. In the quark-sector typically a representation is chosen where the up-type flavour eigenstates correspond to the mass eigenstates and the down-type quarks mix. This mixing is described by the CKM-matrix \todo{Quelle}. This is an unitary matrix, described by three mixing angles and one CP-violating phase, which indicates the relative strength between individual transitions. 
-  \item \textit{Strong Force:} The theoretical framework describing the strong force is called Quantum Chromodynamics (QCD) \todo{Quelle}. It is mediated via eight massless gluons and acts on the colour charge which is carried for instance by quarks. In contrast to the photon which is electrically neutral and thus can not interact with itself, gluons carry a colour charge and hence are able to couple to themself. The colour charge exists in three different states commonly denoted as 'red', 'green' and 'blue'. Quarks and gluons are collectively referred to as partons. \\
-Regarding the dependence on the distance the strong force behaves differently than other fundamental forces: the coupling strength increases with rising distance. This is a consequence of the different colour states and the self-coupling property of gluons. It is usually referred to as \textit{confinement} and causes the effect that coloured objects can not exist freely. In fact when separated, coloured objects start to build new coloured particles until only a colour neutral formation is left. Such colourless objects linked by the strong force are named hadrons. On the other hand, particles taking part in the strong interaction start to behave quasi-free when they are brought close together. This feature is known as \textit{asymptotic freedom}.   
+Weak interactions preferably take place within one generation, e.g. \lel or \lmu transform into the respective neutrinos when emitting a \Wm. However, since the mass eigenstates in the weak interaction differ from the flavour eigenstates, \Wpm bosons can also couple to fermions between different generations. In the quark-sector typically a representation is chosen where the up-type flavour eigenstates correspond to the mass eigenstates and the down-type quarks mix. This mixing is described by the CKM-matrix ~\cite{PhysRevLett.10.531, PTP.49.652}. This is an unitary matrix, described by three mixing angles and one CP-violating phase, which indicates the relative strength between individual transitions. 
+  \item \textit{Strong Force:} The theoretical framework describing the strong force is called Quantum Chromodynamics (QCD). It is mediated via eight massless gluons and acts on the colour charge which is carried for instance by quarks. In contrast to the photon which is electrically neutral and thus can not interact with itself, gluons carry a colour charge and hence are able to couple to themself. The colour charge exists in three different states commonly denoted as 'red', 'green' and 'blue'. Quarks and gluons are collectively referred to as partons. \\
+Regarding the dependence on the distance the strong force behaves differently than other fundamental forces: the coupling strength increases with rising distance. This is a consequence of the different colour states and the self-coupling property of gluons. It is usually referred to as \textit{confinement}~\cite{Alkofer:2006fu} and causes the effect that coloured objects can not exist freely. In fact when separated, coloured objects start to build new coloured particles until only a colour neutral formation is left. Such colourless objects linked by the strong force are named hadrons. On the other hand, particles taking part in the strong interaction start to behave quasi-free when they are brought close together. This feature is known as \textit{asymptotic freedom}~\cite{PhysRevLett.30.1346, PhysRevLett.30.1343}. 
  \end{description}
-First proposed by Salam, Glashow and Weinberg \todo{Quelle}, the electromagnetic and the weak force could be successfully unified into the electroweak force. As denoted earlier, the weak force acts on the weak isospin $T_{3}$ while the electromagnetic force acts on the hypercharge $Y$. These two quantities are connected via the following relation to the electric charge $Q$
+First proposed by Salam, Glashow and Weinberg~\cite{Glashow:1961tr, Weinberg:1967tq}, the electromagnetic and the weak force could be successfully unified into the electroweak force. As denoted earlier, the weak force acts on the weak isospin $T_{3}$ while the electromagnetic force acts on the hypercharge $Y$. These two quantities are connected via the following relation to the electric charge $Q$
 \begin{equation*}
 Q = T_{3} + Y/2
 \end{equation*}
 In the electroweak theory, three gauge bosons $W^{1,2,3}_{\mu}$ are introduced for $SU(2)_{L}$ and one gauge boson $B_{\mu}$ for $U(1)_{Y}$. The physical states photon, \Wpm and \Z are formed by mixing of these massless states. While the charged $\Wpm_{\mu}$ bosons are superpositions of $W^{1}_{\mu}$ and $W^{2}_{\mu}$, the fields $A_{\mu}$ of the photon and $Z_{\mu}$ of the neutral vector boson are obtained by a mixing of the gauge fields $W^{3}_{\mu}$ and $B_{\mu}$ parametrized by the weak mixing angle $\theta_{W}$ \todo{Formel?}.  
 \item \textbf{Higgs Boson:} The electroweak theory in the current representation requires that fermions and bosons are massless particles as mass terms violate the gauge invariance under $SU(2)_{L} \otimes U(1)_{Y}$ transformations. This is in contradiction to experimental observations which have shown that all particles, except for photon and gluon, in fact have mass. \\
-An explanation for the generation of particle masses without violation of the principles of the electroweak theory is provided by the \textit{Higgs-mechanism} \todo{Quellen} which is based on the concept of spontaneous symmetry breaking. The main idea behind this meachnism is that in general the principle of local gauge invariance is obeyed, but that it is explicitly broken by the ground state. In the context of the Higgs-mechanism this is realized by the introduction of the Higgs field described by a potential with a non-zero minimum value \todo{Formel?}. This non-vanishing minimum represents the expectation value of the quantum field in the vacuum -- the vacuum expectation value. The masses of particles are eventually generated by the couplings to the Higgs field. \\
+An explanation for the generation of particle masses without violation of the principles of the electroweak theory is provided by the \textit{Higgs-mechanism}~\cite{PhysRevLett.13.508, PhysRevLett.13.321, PhysRevLett.13.585} which is based on the concept of spontaneous symmetry breaking. The main idea behind this meachnism is that in general the principle of local gauge invariance is obeyed, but that it is explicitly broken by the ground state. In the context of the Higgs-mechanism this is realized by the introduction of the Higgs field described by a potential with a non-zero minimum value \todo{Formel?}. This non-vanishing minimum represents the expectation value of the quantum field in the vacuum -- the vacuum expectation value. The masses of particles are eventually generated by the couplings to the Higgs field. \\
 Furthermore, the Higgs-mechanism also predicts the existence of a new heavy boson, the Higgs boson, which is a quantum excitation of one of the components of the Higgs field. It is supposed to be a scalar and the Higgs mass one of the free parameters of the SM. \\
-The discovery of a new boson at a mass of around 125~\gev has been announced by the ATLAS and CMS collaborations in 2012 \todo{Quelle}. As all properties of this new boson are consistent with SM predictions so far \todo{Quelle}, this indicates that the last existing gap of the SM could finally be closed. 
+The discovery of a new boson at a mass of around 125~\gev has been announced by the ATLAS and CMS collaborations in 2012~\cite{Aad:2012tfa, Chatrchyan:2012ufa}. As all properties of this new boson are consistent with SM predictions so far (c.f. e.g.~\cite{Aad:2013wqa, Aad:2014eva, Aad:2014eha, CMS-PAS-HIG-14-009}), this indicates that the last remaining gap of the SM could finally be closed.   
 \end{description}
 
 \subsection{Limitations of the Standard Model}
@@ -53,15 +53,15 @@ Although the SM has been incredibly successful so far and lead to several discov
 %As stated earlier it is e.g. not possible to include gravity at the moment or provide an explanation for the observed matter-antimatter asymmetry in the universe. These are only some of known shortcomings of the SM of which a few additional ones are discussed in some detail in the following.
 \begin{description}
 \item \textbf{Gravity:} As stated already earlier, the SM contains no description of gravity. In particular, it is currently not possible to unify general relativity and quantum theory in one common concept.
-\item \textbf{Matter antimatter asymmetry:} According to the SM matter and anitmatter exist to equal amounts in the universe which is in fact not the case. A theory which would be able to explain such an asymmetry needs some source of CP-violation. The only source of CP-violation within the SM is arising from the CKM matrix as described in~\ref{sec:sm}. However, this is not enough to be able to explain the degree of matter antimatter asymmetry in the universe \todo{Quelle}.   
+\item \textbf{Matter antimatter asymmetry:} According to the SM matter and anitmatter exist to equal amounts in the universe which is in fact not the case. A theory which would be able to explain such an asymmetry needs some source of CP-violation. The only source of CP-violation within the SM is arising from the CKM matrix as described in~\ref{sec:sm}. However, this is not enough to be able to explain the degree of matter antimatter asymmetry in the universe~\cite{bib:CPViolation}.    
 \item \textbf{Unification of couplings:} The unification of the electromagnetic and the weak force leads to the question, if it is even possible to further unify the electroweak force with the strong force in order to build a combined theory usually referred to as Grand Unified Theory (GUT). This would imply that the coupling constants of the SM intersect when extrapolating them from the electroweak to the GUT scale. However, this feature is not observed within the SM.
-\item \textbf{Origin of dark matter and dark energy:} There exist several cosmological observations that indicate that the matter described by the SM makes up only around ... \% of the universe \todo{Quelle}. A by far larger part of ... is assigned to so-called \textit{dark matter} which is presumably neutral and only weakly interacting. The only particles within the SM possessing such attributes are neutrinos. However, they are not able to account for the whole relic density present in the universe \todo{Quelle}. Furthermore, for the major part of the universe making up .. \% there is no hint at all what its' nature could be. Thus it is typically denoted with \textit{dark energy}.
+\item \textbf{Origin of dark matter and dark energy:} There exist several cosmological observations that indicate that the matter described by the SM makes up only $4.9$\% of the universe~\cite{Ade:2013zuv}. A by far larger part of $26.8$\% is assigned to so-called \textit{dark matter} which is presumably neutral and only weakly interacting. The only particles within the SM possessing such attributes are neutrinos. However, they are not able to account for the whole relic density present in the universe~\cite{Bertone:2004pz}. Furthermore, for the major part of the universe making up $68.3$\% there is no hint at all what its' nature could be. Thus it is typically denoted with \textit{dark energy}.    
 \item \textbf{Hierarchy problem:} The observable mass of the Higgs boson is given by the bare mass of the Higgs boson plus contributions arising from higher order corrections caused by each massive SM particle. These higher order corrections are usually dependent on an ultraviolet cut-off scale \todo{Formel?}. Conventionally this UV cut-off scale is chosen to be the Planck scale. This would result in a Higgs mass considerably larger than the oberserved mass of around 125~\gev and requires an enormous amount of fine tuning in order to address this problem. 
 \end{description}
 
 \section{Supersymmetry}
 \label{sec:susy}
-In order to overcome the weaknesses of the SM and to provide explanations for so far unsolved problems of which some have been dicussed in~\ref{subsec:sm_shortcomings}, several theories have been developed which go beyond the SM. Among those, a favoured extension is \textit{supersymmetry} (SUSY) as it is able to provide several benefits at once. In this section a brief introduction to the general concept of supersymmetry is given with focus on the \textit{Minimal Supersymmetric Standard Model} (MSSM). For details see ... .\\ 
+In order to overcome the weaknesses of the SM and to provide explanations for so far unsolved problems of which some have been dicussed in~\ref{subsec:sm_shortcomings}, several theories have been developed which go beyond the SM. Among those, a favoured extension is \textit{supersymmetry} (SUSY) as it is able to provide several benefits at once. In this section a brief introduction to the general concept of supersymmetry is given with focus on the \textit{Minimal Supersymmetric Standard Model} (MSSM). For detailled reviews see e.g.~\cite{Aitchison:2005cf, Martin:1997ns}.\\ 
 \\
 %The basic idea behind supersymmetry is that each standard model particle gets a supersymmetric partner particle which possesses the same quantum numbers except for the spin which differs by $1/2$. 
 The basic idea of a supersymmetric theory is that a fermionic state is converted into a bosonic state and vice versa by the generator of a supersymmetry transformation $Q$ according to
