--- a/Thesis.bib
+++ b/Thesis.bib
@@ -286,6 +286,20 @@ author = {R. Brandelik and W. Braunschweig and K. Gather and V. Kadansky and K. 
      SLACcitation  = "%%CITATION = PHLTA,B86,418;%%"
 }
 
+@article{Alkofer:2006fu,
+      author         = "Alkofer, Reinhard and Greensite, J.",
+      title          = "{Quark Confinement: The Hard Problem of Hadron Physics}",
+      journal        = "J.Phys.",
+      volume         = "G34",
+      pages          = "S3",
+      doi            = "10.1088/0954-3899/34/7/S02",
+      year           = "2007",
+      eprint         = "hep-ph/0610365",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/0610365;%%",
+}
+
 @article{PhysRevLett.30.1346,
   volume = {30},
   journal = {Phys. Rev. Lett.},
@@ -558,6 +572,97 @@ $\bar{p}p$ collisions}",
       year         = "2012"
 }
 
+@article{Aad:2012tfa,
+      author         = "Aad, Georges and others",
+      title          = "{Observation of a new particle in the search for the
+                        Standard Model Higgs boson with the ATLAS detector at the
+                        LHC}",
+      collaboration  = "ATLAS Collaboration",
+      journal        = "Phys.Lett.",
+      volume         = "B716",
+      pages          = "1-29",
+      doi            = "10.1016/j.physletb.2012.08.020",
+      year           = "2012",
+      eprint         = "1207.7214",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2012-218",
+      SLACcitation   = "%%CITATION = ARXIV:1207.7214;%%",
+}
+
+@article{Chatrchyan:2012ufa,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Observation of a new boson at a mass of 125 GeV with the
+                        CMS experiment at the LHC}",
+      collaboration  = "CMS Collaboration",
+      journal        = "Phys.Lett.",
+      volume         = "B716",
+      pages          = "30-61",
+      doi            = "10.1016/j.physletb.2012.08.021",
+      year           = "2012",
+      eprint         = "1207.7235",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CMS-HIG-12-028, CERN-PH-EP-2012-220",
+      SLACcitation   = "%%CITATION = ARXIV:1207.7235;%%",
+}
+
+@article{Aad:2013wqa,
+      author         = "Aad, Georges and others",
+      title          = "{Measurements of Higgs boson production and couplings in
+                        diboson final states with the ATLAS detector at the LHC}",
+      collaboration  = "ATLAS Collaboration",
+      journal        = "Phys.Lett.",
+      volume         = "B726",
+      pages          = "88-119",
+      doi            = "10.1016/j.physletb.2013.08.010",
+      year           = "2013",
+      eprint         = "1307.1427",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2013-103",
+      SLACcitation   = "%%CITATION = ARXIV:1307.1427;%%",
+}
+
+@article{Aad:2014eva,
+      author         = "Aad, Georges and others",
+      title          = "{Measurements of Higgs boson production and couplings in
+                        the four-lepton channel in pp collisions at center-of-mass
+                        energies of 7 and 8 TeV with the ATLAS detector}",
+      collaboration  = " ATLAS Collaboration",
+      year           = "2014",
+      eprint         = "1408.5191",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-170",
+      SLACcitation   = "%%CITATION = ARXIV:1408.5191;%%",
+}
+
+@article{Aad:2014eha,
+      author         = "Aad, Georges and others",
+      title          = "{Measurement of Higgs boson production in the diphoton
+                        decay channel in $pp$ collisions at center-of-mass
+                        energies of 7 and 8 TeV with the ATLAS detector}",
+      collaboration  = " ATLAS Collaboration",
+      year           = "2014",
+      eprint         = "1408.7084",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2014-198",
+      SLACcitation   = "%%CITATION = ARXIV:1408.7084;%%",
+}
+
+@techreport{CMS-PAS-HIG-14-009,
+      title         = "{Precise determination of the mass of the Higgs boson and
+                       studies of the compatibility of its couplings with the
+                       standard model}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-HIG-14-009",
+      year          = "2014",
+}
+
 @Article{bib:Hambye:1996wb,
      author    = "Hambye, Thomas and Riesselmann, Kurt",
      title     = "{Matching conditions and Higgs mass upper bounds
@@ -806,6 +911,34 @@ to 10\fbinv of Data",
       SLACcitation   = "%%CITATION = ARXIV:1101.0593;%%",
 }
 
+@article{Ade:2013zuv,
+      author         = "Ade, P.A.R. and others",
+      title          = "{Planck 2013 results. XVI. Cosmological parameters}",
+      collaboration  = "Planck Collaboration",
+      journal        = "Astron.Astrophys.",
+      doi            = "10.1051/0004-6361/201321591",
+      year           = "2014",
+      eprint         = "1303.5076",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:1303.5076;%%",
+}
+
+@article{Bertone:2004pz,
+      author         = "Bertone, Gianfranco and Hooper, Dan and Silk, Joseph",
+      title          = "{Particle dark matter: Evidence, candidates and
+                        constraints}",
+      journal        = "Phys.Rept.",
+      volume         = "405",
+      pages          = "279-390",
+      doi            = "10.1016/j.physrep.2004.08.031",
+      year           = "2005",
+      eprint         = "hep-ph/0404175",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "FERMILAB-PUB-04-047-A",
+      SLACcitation   = "%%CITATION = HEP-PH/0404175;%%",
+}
 
 % --- Beyond the SM ---------------------------------------
 @article{ArkaniHamed2001232,
@@ -1096,6 +1229,29 @@ author = {}
   Publisher = {Cambridge University Press},
   Year = {2007},
   Note = {ISBN 978-0-521-88023-7}
+}
+
+@article{Aitchison:2005cf,
+      author         = "Aitchison, Ian J.R.",
+      title          = "{Supersymmetry and the MSSM: An Elementary introduction}",
+      year           = "2005",
+      eprint         = "hep-ph/0505105",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/0505105;%%",
+}
+
+@article{Martin:1997ns,
+      author         = "Martin, Stephen P.",
+      title          = "{A Supersymmetry primer}",
+      journal        = "Adv.Ser.Direct.High Energy Phys.",
+      volume         = "21",
+      pages          = "1-153",
+      year           = "2010",
+      eprint         = "hep-ph/9709356",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/9709356;%%",
 }
 
 @article{Kane:1993td,
@@ -1396,19 +1552,6 @@ URL = {http://www.annualreviews.org/doi/abs/10.1146/annurev-astro-082708-101659}
       reportNumber   = "CERN-TH-2001-163",
       doi            = "10.1088/1126-6708/2001/08/024",
       SLACcitation   = "%%CITATION = HEP-PH/0106334;%%",
-}
-
-@article{Martin:1997ns,
-      author         = "Martin, Stephen P.",
-      title          = "{A Supersymmetry primer}",
-      journal        = "Adv.Ser.Direct.High Energy Phys.",
-      volume         = "21",
-      pages          = "1-153",
-      year           = "2010",
-      eprint         = "hep-ph/9709356",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
-      SLACcitation   = "%%CITATION = HEP-PH/9709356;%%",
 }
 
 @manual{bib:mastercode,
