--- a/Thesis.tex
+++ b/Thesis.tex
@@ -60,6 +60,7 @@ a4paper
 \usepackage{rotating}
 \usepackage{float}
 \usepackage{afterpage}
+\usepackage{verbatim}
 
 %\usepackage{setspace}
 %\doublespacing
