--- a/Theory.tex
+++ b/Theory.tex
@@ -68,7 +68,7 @@ The basic idea of a supersymmetric theory is that a fermionic state is converted
 \begin{equation*}
 Q \ket{\mathrm{fermion}} \, = \, Q \ket{\mathrm{boson}}, \hspace{20mm} Q \ket{\mathrm{boson}} \, = \, Q \ket{\mathrm{fermion}}.
 \end{equation*}
-The supersymmetric fermionic and bosonic partner particles are called \textit{superpartner} and form together the irreducible representations of the supersymmetry algebra named \textit{supermultiplets} with the same number of fermionic and bosonic degrees of freedom. It can be shown \todo{Quelle} that in case of unbroken supersymmetry partner particles within one supermultiplet have the same mass as well as the same quantum numbers like electric charge, weak isospin and color degrees of freedom, except for the spin.\\
+The supersymmetric fermionic and bosonic partner particles are called \textit{superpartner} and form together the irreducible representations of the supersymmetry algebra named \textit{supermultiplets} with the same number of fermionic and bosonic degrees of freedom. In case of unbroken supersymmetry, partner particles within one supermultiplet have the same mass as well as the same quantum numbers like electric charge, weak isospin and color degrees of freedom, except for the spin. Commonly, supersymmetric particles are denoted \textit{sparticles}. \\
 \\
 Furthermore, in a general supersymmetric theory fulfilling the criteria of gauge invariance and renormalisability, processes are allowed violating either the lepton or baryon number conservation. However, such a process has not been observed experimentally so far and would imply for instance a rapid decay of protons. The current lower limit on the proton lifetime is ... \todo{Quelle} and indicates that such processes must be suppressed. In order to achieve this, a new quantum number called \textit{R-parity} is introduced according to
 \begin{equation*}
@@ -83,17 +83,17 @@ A R-parity conserving supersymmetric theory as described above provides some ele
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{c}
-    \includegraphics[width=0.75\textwidth]{figures/Couplings.jpg}
+    \includegraphics[width=0.7\textwidth]{figures/Couplings.jpg}
   \end{tabular}
   \caption{Comparison of the renormalization group evolution of the couplings $\alpha_{a}^{-1}$ in the SM (dashed lines) and the MSSM (solid lines) including two-loop effects. The masses of the supersymmetric particles in the MSSM are considered as a common threshold changing between 500\gev and 1.5\tev while $\alpha_{3}(m_{Z})$ is varied between 0.117 and 0.121. Taken from~\cite{Martin:1997ns}.}
   \label{fig:couplings}
 \end{figure}
 In addition to this naturalness aspects, the coupling constants of the forces which do not intersect within the SM actually meet in one point when extrapolating the couplings from the electroweak to the GUT scale considering the existence of supersymmetric particles. This effect is illustrated in Fig.~\ref{fig:couplings}. It is visible that the evolution of the couplings is modified with respect to the SM at that energy scale where the supersymmetric particles enter. In general, this hints to the possibility of a grand unification.\\
-Besides the two advantages discussed above, R-parity conserving SUSY models also provide a suitable dark matter candidate. As discussed previously, each decay of supersymmetric particles finally leads to the existence of an LSP which can not decay further. Thus, it is an adequate DM candidate when it is electrically uncharged and only weakly interacting \todo{Quelle}.
+Besides the two advantages discussed above, R-parity conserving SUSY models also provide a suitable dark matter candidate. As discussed previously, each decay of supersymmetric particles finally leads to the existence of an LSP which can not decay further. Thus, it is an adequate DM candidate when it is electrically uncharged and only weakly interacting.
 
 \subsection{The MSSM}
 \label{subsec:mssm}
-
+The smallest possible supersymmetric extension of the SM including the full particle spectrum and interactions is comprised in the MSSM. An overview of the respective particle content is given in Tab.~\ref{tab:mssm_particles}. 
 \begin{table}[htbp] 
   \centering
   \label{tab:mssm_particles}
@@ -104,7 +104,7 @@ Besides the two advantages discussed above, R-parity conserving SUSY models also
       Type & Spin & Gauge eigenstates & Mass eigenstates \\
       \midrule
       \midrule
-      Higgs bosons & 0 & $H_{u}^{0}$ $H_{d}^{0}$ $H_{u}^{+}$ $H_{u}^{-}$ & $h^{0}$ $H^{0}$ $A^{0}$ $H^{\pm}$  \\
+      Higgs bosons & 0 & $H_{u}^{0}$ $H_{d}^{0}$ $H_{u}^{+}$ $H_{d}^{-}$ & $h^{0}$ $H^{0}$ $A^{0}$ $H^{\pm}$  \\
       \midrule
       & & $\tilde{u}_{L}$ $\tilde{u}_{R}$ $\tilde{d}_{L}$ $\tilde{d}_{R}$ &  see left \\
       Squarks & 0 & $\tilde{s}_{L}$ $\tilde{s}_{R}$ $\tilde{c}_{L}$ $\tilde{c}_{R}$  & see left \\
@@ -125,7 +125,10 @@ Besides the two advantages discussed above, R-parity conserving SUSY models also
     \end{tabular}%}
  \caption{Supersymmetric particles contained in the MSSM neglecting mixing in the first two sfermion generations. Following~\cite{Martin:1997ns}.} 
 \end{table}
-
+This extension is minimal in that sense that it introduces the least feasible number of additional particles to the existing SM particles. Thus, each SM fermion gets an individual superpartner while the interactions and couplings of the supersymmetric particles are the same as for the SM counterparts. The different transformation of left- and right-handed fermions under the gauge groups implies the necessity to introduce separate superpartners for left- and right-handed states as well. These are arranged with their bosonic (spin 0) superpartner in a \textit{chiral} supermultiplet. The labels indicating the left- and right-handed states refer to the helicity of the respective SM particle. These supersymmetric partners of fermions are named \textit{sfermions} distinguishing between \textit{sleptons} and \textit{squarks} -- the supersymmetric partners of leptons and quarks. In a similar manner the SM gauge bosons are arranged in \textit{gauge} supermultiplets together with their fermionic (spin 1/2) supersymmetric correspondents. The SUSY partners of the gauge bosons are named \textit{gauginos} so that the superpartners in the gauge supermultiplets are the \textit{gluino}, \textit{wino} and \textit{bino}. The corresponding gaugino mixtures of the neutral wino and the bino are the \textit{photino} and the \textit{zino}. Beyond that, the supersymmetric particle spectrum is extended by another supermultiplet containing the graviton (spin 2) and the respective supersymmetric partner -- the \textit{gravitino} (spin 3/2). \\
+As described in Sec.~\ref{sec:sm}, masses arise in the SM from the concept of spontaneous symmetry breaking implying the existence of the Higgs boson. The supersymmetric partner of the Higgs boson is named \textit{higgsino}. While in the SM one Higgs doublet is sufficient to give mass to all particles, the Higgs sector needs to be extended in the MSSM. Here, two Higgs doublets are introduced where one doublet $H_u$ gives mass to the up-type quarks and the other one $H_d$ to the down-type quarks, respectively. These two doublets have together eight degrees of freedom of which three are needed to give mass to the gauge bosons of the weak interaction as in the SM. This results in five physical Higgs bosons which are the two scalar Higgs particles $h^0, H^0$, the pseudoscalar $A^0$ as well as the charged Higgs bosons $H^{\pm}$. As further consequence there are two vacuum expectation values $v_u$ and $v_d$ present -- each assigned to one Higgs doublet whose ratio $\mathrm{tan} \, \beta = v_u/v_d$ is a free parameter of the model. \\
+As in the SM, the gauge eigenstates of the theory do not necessarily have to be also the mass eigenstates. A mixing occurs especially in the gaugino sector. Here, the neutral components of the bino and wino mix with the neutral higgsinos and form four mass eigenstates -- the \textit{neutralinos} $\tilde{\chi}^0$. Similarly, also the charged gauginos and higgsinos mix to the four \textit{charginos} $\tilde{\chi^{\pm}}$. Furthermore, mixing can also appear in the third squark and slepton generation. \\
+All in all, the MSSM introduces 35 new particles (neglecting mixing in the two first fermion generations) and possesses 124 free parameters of which 18 correspond to SM parameters~\cite{bib:PDG:2012}. 
 \subsection{SUSY-Breaking}
 \label{subsec:susy_breaking}
 
