--- a/Theory.tex
+++ b/Theory.tex
@@ -127,7 +127,7 @@ The smallest possible supersymmetric extension of the SM including the full part
 \end{table}
 This extension is minimal in that sense that it introduces the least feasible number of additional particles to the existing SM particles. Thus, each SM fermion gets an individual superpartner while the interactions and couplings of the supersymmetric particles are the same as for the SM counterparts. The different transformation of left- and right-handed fermions under the gauge groups implies the necessity to introduce separate superpartners for left- and right-handed states as well. These are arranged with their bosonic (spin 0) superpartner in a \textit{chiral} supermultiplet. The labels indicating the left- and right-handed states refer to the helicity of the respective SM particle. These supersymmetric partners of fermions are named \textit{sfermions} distinguishing between \textit{sleptons} and \textit{squarks} -- the supersymmetric partners of leptons and quarks. In a similar manner the SM gauge bosons are arranged in \textit{gauge} supermultiplets together with their fermionic (spin 1/2) supersymmetric correspondents. The SUSY partners of the gauge bosons are named \textit{gauginos} so that the superpartners in the gauge supermultiplets are the \textit{gluino}, \textit{wino} and \textit{bino}. The corresponding gaugino mixtures of the neutral wino and the bino are the \textit{photino} and the \textit{zino}. Beyond that, the supersymmetric particle spectrum is extended by another supermultiplet containing the graviton (spin 2) and the respective supersymmetric partner -- the \textit{gravitino} (spin 3/2). \\
 As described in Sec.~\ref{sec:sm}, masses arise in the SM from the concept of spontaneous symmetry breaking implying the existence of the Higgs boson. The supersymmetric partner of the Higgs boson is named \textit{higgsino}. While in the SM one Higgs doublet is sufficient to give mass to all particles, the Higgs sector needs to be extended in the MSSM. Here, two Higgs doublets are introduced where one doublet $H_u$ gives mass to the up-type quarks and the other one $H_d$ to the down-type quarks, respectively. These two doublets have together eight degrees of freedom of which three are needed to give mass to the gauge bosons of the weak interaction as in the SM. This results in five physical Higgs bosons which are the two scalar Higgs particles $h^0, H^0$, the pseudoscalar $A^0$ as well as the charged Higgs bosons $H^{\pm}$. As further consequence there are two vacuum expectation values $v_u$ and $v_d$ present -- each assigned to one Higgs doublet whose ratio $\mathrm{tan} \, \beta = v_u/v_d$ is a free parameter of the model. \\
-As in the SM, the gauge eigenstates of the theory do not necessarily have to be also the mass eigenstates. A mixing occurs especially in the gaugino sector. Here, the neutral components of the bino and wino mix with the neutral higgsinos and form four mass eigenstates -- the \textit{neutralinos} $\tilde{\chi}^0$. Similarly, also the charged gauginos and higgsinos mix to the four \textit{charginos} $\tilde{\chi^{\pm}}$. Furthermore, mixing can also appear in the third squark and slepton generation. \\
+As in the SM, the gauge eigenstates of the theory do not necessarily have to be also the mass eigenstates. A mixing occurs especially in the gaugino sector. Here, the neutral components of the bino and wino mix with the neutral higgsinos and form four mass eigenstates -- the \textit{neutralinos} $\tilde{\chi}^0$. Similarly, also the charged gauginos and higgsinos mix to the four \textit{charginos} $\tilde{\chi}^{\pm}$. Furthermore, mixing can also appear in the third squark and slepton generation. \\
 All in all, the MSSM introduces 35 new particles (neglecting mixing in the two first fermion generations) and possesses 124 free parameters of which 18 correspond to SM parameters~\cite{bib:PDG:2012}. 
 \subsection{SUSY-Breaking}
 \label{subsec:susy_breaking}
